--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.1",
     "highlightable": "^1.0.7",
     "npm": "^6.1.0",
+    "rc-tooltip": "^3.7.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
